syntax = "proto3";
package support;
option java_package = "bisq.support.protobuf";
option java_multiple_files = true;
import "user.proto";
import "chat.proto";
import "offer.proto";
import "contract.proto";
import "network.proto";
import "network_identity.proto";

message MediationRequest {
  string tradeId = 1;
  contract.Contract contract = 2;
  user.UserProfile requester = 3;
  user.UserProfile peer = 4;
  repeated chat.ChatMessage chatMessages = 5;
  optional network.identity.NetworkId mediatorNetworkId = 6;
}

message MediatorsResponse {
  string tradeId = 1;
}

message MediationCase {
  MediationRequest mediationRequest = 1;
  sint64 requestDate = 2;
  bool isClosed = 3;
  optional sint64 closeCaseDate = 4;
}

message MediatorStore {
  repeated MediationCase mediationCases = 1;
}

enum MediationCaseState {
  MEDIATIONCASESTATE_UNSPECIFIED = 0;
  MEDIATIONCASESTATE_OPEN = 1;
  MEDIATIONCASESTATE_CLOSED = 2;
  MEDIATIONCASESTATE_RE_OPENED = 3;
}

enum MediationResultReason {
  MEDIATIONRESULTREASON_UNSPECIFIED = 0;
  MEDIATIONRESULTREASON_OTHER = 1;
  MEDIATIONRESULTREASON_BUG = 2;
  MEDIATIONRESULTREASON_USABILITY = 3;
  MEDIATIONRESULTREASON_BANK = 4;
  MEDIATIONRESULTREASON_OPTION_TRADE = 5;
  MEDIATIONRESULTREASON_TRADER_NOT_RESPONDING = 6;
  MEDIATIONRESULTREASON_WRONG_SENDER_ACCOUNT = 7;
  MEDIATIONRESULTREASON_TRADE_ALREADY_SETTLED = 8;
  MEDIATIONRESULTREASON_PEER_WAS_LATE = 9;
}

enum MediationPayoutDistributionType {
  MEDIATIONPAYOUTDISTRIBUTIONTYPE_UNSPECIFIED = 0;
  MEDIATIONPAYOUTDISTRIBUTIONTYPE_CUSTOM_PAYOUT = 1;
  MEDIATIONPAYOUTDISTRIBUTIONTYPE_BUYER_GETS_TRADE_AMOUNT = 2;
  MEDIATIONPAYOUTDISTRIBUTIONTYPE_BUYER_GETS_TRADE_AMOUNT_PLUS_COMPENSATION = 3;
  MEDIATIONPAYOUTDISTRIBUTIONTYPE_BUYER_GETS_TRADE_AMOUNT_MINUS_PENALTY = 4;
  MEDIATIONPAYOUTDISTRIBUTIONTYPE_SELLER_GETS_TRADE_AMOUNT = 5;
  MEDIATIONPAYOUTDISTRIBUTIONTYPE_SELLER_GETS_TRADE_AMOUNT_PLUS_COMPENSATION = 6;
  MEDIATIONPAYOUTDISTRIBUTIONTYPE_SELLER_GETS_TRADE_AMOUNT_MINUS_PENALTY = 7;
}

message MuSigMediationRequest {
  string tradeId = 1;
  contract.Contract contract = 2;
  user.UserProfile requester = 3;
  user.UserProfile peer = 4;
  repeated chat.ChatMessage chatMessages = 5;
  optional network.identity.NetworkId mediatorNetworkId = 6;
}

message MuSigMediatorsResponse {
  string tradeId = 1;
}

message MuSigMediationResult {
  uint64 date = 1;
  MediationResultReason mediationResultReason = 2;
  sint64 proposedBuyerPayoutAmount = 3;
  sint64 proposedSellerPayoutAmount = 4;
  optional string summaryNotes = 5;
  MediationPayoutDistributionType mediationPayoutDistributionType = 6;
  optional double payoutAdjustmentPercentage = 7;
}

message MuSigMediationCase {
  MuSigMediationRequest muSigMediationRequest = 1;
  sint64 requestDate = 2;
  MediationCaseState mediationCaseState = 3;
  optional MuSigMediationResult muSigMediationResult = 4;
}

message MuSigMediatorStore {
  repeated MuSigMediationCase muSigMediationCases = 1;
}

message ReportToModeratorMessage {
  sint64 date = 1;
  string reporterUserProfileId = 2;
  user.UserProfile accusedUserProfile = 3;
  string message = 4;
  chat.ChatChannelDomain chatChannelDomain = 5;
}

message BannedUserModeratorData {
  string reporterUserProfileId = 1;
  string accusedUserProfileId = 2;
  string reportersMessage = 3;
  string banReason = 4;
}

message ModeratorStore {
  repeated ReportToModeratorMessage reportToModeratorMessages = 1;
  repeated BannedUserModeratorData bannedUserModeratorData = 2;
}
